modified:   about_en.html 	modified:   main.css 	modified:   main_en.html 	modified:   skills_en.html

--- a/skills_en.html
+++ b/skills_en.html
@@ -4,7 +4,7 @@
       <title>Portfoli</title>
    </head>
    <body>
-      <a id="LANG" href="index.html">Language / 言語</a>
+      <a href="index.html">Language / 言語</a>
       <main> 
 	 <h1>Skills</h1>
 	 <hr>
@@ -104,6 +104,12 @@
 	       <th>PHP</th>
 	       <th>~2014</th>
 	       <th>2020<th>
+	    </tr>
+
+	    <tr>
+	       <th>LaTeX</th>
+	       <th>2020</th>
+	       <th>2021</th>
 	    </tr>
 	 </table>
 
