--- a/about_en.html
+++ b/about_en.html
@@ -4,7 +4,7 @@
       <title>Portfoli</title>
    </head>
    <body>
-      <a id="LANG" href="index.html">Language / 言語</a>
+      <a href="index.html">Language / 言語</a>
       <main> 
 	 <h1>About this page</h1>
 	 <hr>
