--- a/main_en.html
+++ b/main_en.html
@@ -4,7 +4,7 @@
       <title>Portfoli</title>
    </head>
    <body>
-      <a id="LANG" href="index.html">Language / 言語</a>
+      <a href="index.html">Language / 言語</a>
       <main>
 	    <h1>Portfolio</h1>
 	    <hr>
