modified:   about_en.html 	modified:   main_en.html 	modified:   main_team_en.html 	modified:   skills_en.html

--- a/about_en.html
+++ b/about_en.html
@@ -25,5 +25,11 @@
 	 </article>
 
       </main>
+
+      <br>
+      <footer>
+	 <hr>
+	 <p>©2021 all rights reserved</p>
+      </footer>
    </body>
 </html>
