--- a/main_en.html
+++ b/main_en.html
@@ -70,7 +70,7 @@
 	 
 	 <article>
 	       <h2>FoundryCraft</h2>
-	       <video preload="none" controls muted poster="old2/img/terminal_tetris.png">
+	       <video preload="none" controls muted poster="old2/img/test.png">
 		  --- Browser dose not support format --- 
 		  <source src="old/videos/foundry_craft.mp4" type="video/mp4">
 	       </video>
@@ -85,6 +85,7 @@
 	    </article>
       </main>
 
+      <br>
       <footer>
 	 <hr>
 	 <p>©2021 all rights reserved</p>
