--- a/main_team_en.html
+++ b/main_team_en.html
@@ -29,16 +29,16 @@
      
 	 <article>
 	    <h2>Mappy</h2>
-	    <video preload="none" controls muted poster="old/img/opengl_3D_demo.png">
+	    <video preload="none" controls muted poster="old2/img/mappy.png">
 	       --- Browser dose not support format --- 
-	       <source src="old/videos/opengl_3D_demo.mp4" type="video/mp4">
+	       <source src="old2/videos/mappy.mp4" type="video/mp4">
 	    </video>
 	    <p>Astroid wars is a game about destroying astroids</p>
 	    <ul>
 	       <li>Platform :: Linux</li>
 	       <li>Written in :: C++ using OpenGL with GLM</li>
 	    </ul>
-	    <a href="">-- Github --</a>
+	    <a href="https://github.com/teamunitytca/mappy">-- Github --</a>
 	 </article>
 	 
       </main>
