--- a/skills_en.html
+++ b/skills_en.html
@@ -141,5 +141,11 @@
 	 </table>
 
       </main>
+
+      <br>
+      <footer>
+	 <hr>
+	 <p>©2021 all rights reserved</p>
+      </footer>
    </body>
 </html>
