modified:   about_en.html 	modified:   main.css

--- a/about_en.html
+++ b/about_en.html
@@ -10,8 +10,8 @@
 	 <hr>
 	 
 	 <a href="main_en.html">-- Projects --</a>
-	 <a href="">-- Team projects --</a>
-	 <a href="">-- Skills --</a>
+	 <a href="main_team_en.html">-- Team projects --</a>
+	 <a href="skills_en.html">-- Skills --</a>
 	 <hr>
 	 
 	 <article>
@@ -24,12 +24,34 @@
 	    <a href="">-- Github --</a>
 	 </article>
 
+	 <article>
+	    <h2>Old protfolio</h2>
+	    <img src="old2/img/old_portfolio.png"></img>
+	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
+	    <ul>
+	       <li>Platforms :: Computer, Phone</li>
+	       <li>Written in :: HTML, CSS, JavaScript</li>
+	    </ul>
+	    <a href="">-- Github --</a>
+	 </article>
+
+	 <article>
+	    <h2>Old Old protfolio</h2>
+	    <img src="old2/img/portfolio.png"></img>
+	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
+	    <ul>
+	       <li>Platforms :: Computer, Phone</li>
+	       <li>Written in :: HTML, CSS, JavaScript</li>
+	    </ul>
+	    <a href="">-- Github --</a>
+	 </article>
+
       </main>
 
       <br>
       <footer>
 	 <hr>
-	 <p>©2021 all rights reserved</p>
+	 <p>Sebastian Johansson, ©2021 all rights reserved</p>
       </footer>
    </body>
 </html>
