modified:   about_en.html 	modified:   index.html 	modified:   main_en.html 	modified:   main_team_en.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="none">
    <head>
       <link rel="stylesheet" href="main.css">
       <title>Portfoli</title>
