--- a/about_en.html
+++ b/about_en.html
@@ -1,7 +1,8 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
    <head>
       <link rel="stylesheet" href="main.css">
-      <title>Portfoli</title>
+      <title>Portfolio</title>
    </head>
    <body>
       <a href="index.html">Language / 言語</a>
@@ -16,17 +17,22 @@
 	 
 	 <article>
 	    <h2>This page</h2>
-	    <p>My portfolio page</p>
+	    <p>
+	       This page was written so that it could be viewed on a phone, computer or even the tty.
+	       To achieve this goal only HTML and CSS could be used, instead of how I wrote my portfolio
+	       in the past using JavaScript in a combination with HTML and CSS. The added benefit to this
+	       approach was that loading times became almost instant  
+	    </p>
 	    <ul>
-	       <li>Platforms :: Terminal, Computer, Phone</li>
+	       <li>Platforms :: Terminal Browser, GUI Browser, Phone</li>
 	       <li>Written in :: HTML and CSS</li>
 	    </ul>
 	    <a href="">-- Github --</a>
 	 </article>
 
 	 <article>
-	    <h2>Old protfolio</h2>
-	    <img src="old2/img/old_portfolio.png"></img>
+	    <h2>Old old protfolio</h2>
+	    <img alt="Picture of old portfolio" src="old2/img/old_portfolio.png"></img>
 	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
 	    <ul>
 	       <li>Platforms :: Computer, Phone</li>
@@ -36,8 +42,8 @@
 	 </article>
 
 	 <article>
-	    <h2>Old Old protfolio</h2>
-	    <img src="old2/img/portfolio.png"></img>
+	    <h2>Old protfolio</h2>
+	    <img alt="Picture of old portfolio"  src="old2/img/portfolio.png"></img>
 	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
 	    <ul>
 	       <li>Platforms :: Computer, Phone</li>
