modified:   about_en.html

--- a/about_en.html
+++ b/about_en.html
@@ -32,7 +32,7 @@
 
 	 <article>
 	    <h2>Old old protfolio</h2>
-	    <img alt="Picture of old portfolio" src="old2/img/old_portfolio.png"></img>
+	    <img alt="Picture of old portfolio" src="old2/img/old_portfolio.png">
 	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
 	    <ul>
 	       <li>Platforms :: Computer, Phone</li>
@@ -43,7 +43,7 @@
 
 	 <article>
 	    <h2>Old protfolio</h2>
-	    <img alt="Picture of old portfolio"  src="old2/img/portfolio.png"></img>
+	    <img alt="Picture of old portfolio"  src="old2/img/portfolio.png">
 	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
 	    <ul>
 	       <li>Platforms :: Computer, Phone</li>
