modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="none">
+<html lang="">
    <head>
       <link rel="stylesheet" href="main.css">
       <title>Portfoli</title>
