modified:   about_en.html

--- a/about_en.html
+++ b/about_en.html
@@ -49,6 +49,7 @@
 	       <li>Platforms :: Computer, Phone</li>
 	       <li>Written in :: HTML, CSS, JavaScript</li>
 	    </ul>
+	    <a href="https://xenose.github.io/old2/index.html">-- The Page --</a>
 	    <a href="">-- Github --</a>
 	 </article>
 
