modified:   about_en.html 	new file:   contact_me_en.html 	modified:   main.css 	modified:   main_en.html

--- a/main_en.html
+++ b/main_en.html
@@ -12,6 +12,7 @@
 	    <a href="main_team_en.html">-- Team projects --</a>
 	    <a href="skills_en.html">-- Skills --</a>
 	    <a href="about_en.html">-- About --</a>
+	    <a href="contact_me_en.html">-- Contact --</a>
 	    <hr>
 
 	 <article>
