--- a/about_en.html
+++ b/about_en.html
@@ -7,13 +7,21 @@
    <body>
       <a href="index.html">Language / 言語</a>
       <main> 
-	 <h1>About this page</h1>
+	 <h1>About</h1>
 	 <hr>
 	 
 	 <a href="main_en.html">-- Projects --</a>
 	 <a href="main_team_en.html">-- Team projects --</a>
 	 <a href="skills_en.html">-- Skills --</a>
+	 <a href="contact_me_en.html">-- Contact --</a>
 	 <hr>
+
+	 <article>
+	    <h2>Me</h2>
+	    <p>
+	       I am a 25 year old programmer with development experience of around 9 years non professional,
+	    </p>
+	 </article>
 	 
 	 <article>
 	    <h2>This page</h2>
