modified:   about_en.html 	modified:   contact_me_en.html 	modified:   main.css 	modified:   main_en.html 	modified:   main_team_en.html 	modified:   skills_en.html

--- a/about_en.html
+++ b/about_en.html
@@ -19,7 +19,8 @@
 	 <article>
 	    <h2>Me</h2>
 	    <p>
-	       I am a 25 year old programmer with development experience of around 9 years non professional,
+	       I am a 25 year old programmer with development experience of around 9~10 years non professional, 
+	       I have developed games, websites, programs and robotics.
 	    </p>
 	 </article>
 	 
@@ -39,13 +40,17 @@
 	 </article>
 
 	 <article>
-	    <h2>Old old protfolio</h2>
+	    <h2>Old old portfolio</h2>
 	    <img alt="Picture of old portfolio" src="old2/img/old_portfolio.png">
-	    <p>Zombie massacre was written as a collaborate effort during high-school</p>
+	    <p>
+	       This page was written as a school portfolio page, I stopped developing it because it
+	       slow and wasn't very appealing.
+	    </p>
 	    <ul>
 	       <li>Platforms :: Computer, Phone</li>
 	       <li>Written in :: HTML, CSS, JavaScript</li>
 	    </ul>
+	    <a href="https://xenose.github.io/old/Index.html">-- The Page --</a>
 	    <a href="">-- Github --</a>
 	 </article>
 
