--- a/contact_me_en.html
+++ b/contact_me_en.html
@@ -19,6 +19,8 @@
 	 <article>
 	    <h2>Work</h2>
 	    <li><a href="mailto: xenose@live.com">-- E-Mail --</a></li>
+
+	    <h2>Private</h2>
 	 </article>
 
       </main>
