--- a/main_en.html
+++ b/main_en.html
@@ -21,7 +21,9 @@
 	       --- Browser dose not support format --- 
 	       <source src="old/videos/astroid_wars.mp4" type="video/mp4">
 	    </video>
-	    <p>Astroid wars is a game about destroying astroids</p>
+	    <p>
+	       Astroid wars is a game about destroying astroids and 
+	    </p>
 	    <ul>
 	       <li>Platforms :: Linux, Windows</li>
 	       <li>Written in :: C++ using SFML</li>
