--- a/main_team_en.html
+++ b/main_team_en.html
@@ -9,9 +9,11 @@
       <main>
 	    <h1>Team Portfolio</h1>
 	    <hr>
+
 	    <a href="main_en.html">-- projects --</a>
 	    <a href="skills_en.html">-- Skills --</a>
 	    <a href="about_en.html">-- About --</a>
+	    <a href="contact_me_en.html">-- Contact --</a>
 	    <hr>
 
 	 <article>
