--- a/skills_en.html
+++ b/skills_en.html
@@ -12,6 +12,7 @@
 	    <a href="main_en.html">-- Projects --</a>
 	    <a href="">-- Team projects --</a>
 	    <a href="about_en.html">-- About --</a>
+	    <a href="contact_me_en.html">-- Contact --</a>
 	 </nav>
 	 <hr>
 
@@ -110,6 +111,18 @@
 	       <th>LaTeX</th>
 	       <th>2020</th>
 	       <th>2021</th>
+	    </tr>
+
+	    <tr>
+	       <th>Go</th>
+	       <th>2020</th>
+	       <th>2020</th>
+	    </tr>
+
+	    <tr>
+	       <th>GLSL</th>
+	       <th>2018</th>
+	       <th>2020</th>
 	    </tr>
 	 </table>
 
