modified:   about_en.html

--- a/about_en.html
+++ b/about_en.html
@@ -36,7 +36,7 @@
 	       <li>Platforms :: Terminal Browser, GUI Browser, Phone</li>
 	       <li>Written in :: HTML and CSS</li>
 	    </ul>
-	    <a href="">-- Github --</a>
+	    <a href="https://github.com/Xenose/xenose.github.io">-- Github --</a>
 	 </article>
 
 	 <article>
@@ -51,7 +51,7 @@
 	       <li>Written in :: HTML, CSS, JavaScript</li>
 	    </ul>
 	    <a href="https://xenose.github.io/old/Index.html">-- The Page --</a>
-	    <a href="">-- Github --</a>
+	    <a href="https://github.com/Xenose/xenose.github.io/tree/master/old">-- Github --</a>
 	 </article>
 
 	 <article>
@@ -63,7 +63,7 @@
 	       <li>Written in :: HTML, CSS, JavaScript</li>
 	    </ul>
 	    <a href="https://xenose.github.io/old2/index.html">-- The Page --</a>
-	    <a href="">-- Github --</a>
+	    <a href="https://github.com/Xenose/xenose.github.io/tree/master/old2">-- Github --</a>
 	 </article>
 
       </main>
