--- a/about_en.html
+++ b/about_en.html
@@ -15,19 +15,11 @@
 	 <a href="skills_en.html">-- Skills --</a>
 	 <a href="contact_me_en.html">-- Contact --</a>
 	 <hr>
-
-	 <article>
-	    <h2>Me</h2>
-	    <p>
-	       I am a 25 year old programmer with development experience of around 9~10 years non professional, 
-	       I have developed games, websites, programs and robotics.
-	    </p>
-	 </article>
 	 
 	 <article>
 	    <h2>This page</h2>
 	    <p>
-	       This page was written so that it could be viewed on a phone, computer or even the tty.
+	       This page was written so that it could be viewed on a phone, computer or even the TTY.
 	       To achieve this goal only HTML and CSS could be used, instead of how I wrote my portfolio
 	       in the past using JavaScript in a combination with HTML and CSS. The added benefit to this
 	       approach was that loading times became almost instant  
