added redirect to old page until web server is up

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
    <head>
       <link rel="stylesheet" href="main.css">
       <title>Portfoli</title>
+		<!-- will switch to my own web server later -->
+		<meta http-equiv="refresh" content="0; url=https://xenose.github.io/old2/index.html" />
    </head>
    <body>
       <main>
