added a link for special browesers

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
    </head>
    <body>
       <main>
-	 <h1>Choose your language<br>言語を選択してください</h1>
+		<a href=https://xenose.github.io/old2/index.html">Go Here</a>
+	 <!--<h1>Choose your language<br>言語を選択してください</h1>
 	 <hr>
 
 	 <a href="main_en.html">English / 英語           </a><br>
 	 <a href="main_en.html">Japanese / 日本語         </a><br>
 	 <a href="main_en.html">Swedish / スウェーデン語 </a><br>
+	 -->
       </main>
    </body>
 </html>
