fixed a broken link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
    </head>
    <body>
       <main>
-		<a href=https://xenose.github.io/old2/index.html">Go Here</a>
+		<a href="https://xenose.github.io/old2/index.html">Go Here</a>
 	 <!--<h1>Choose your language<br>言語を選択してください</h1>
 	 <hr>
 
