started working on a menu

--- a/index.html
+++ b/index.html
@@ -4,5 +4,10 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
+		<ul>
+			<li><a href="xenose.github.com">Home</a></li>
+			<li>Portfolio</li>
+			<li>About</li>
+		</ul>
 	</body>
 </html>
