chanced embed to object

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 			<li>Portfolio</li>
 			<li>About</li>
 		</ul>
-
-		<embed src="texts/home_en.txt">
+		<object data="texts/home_en.txt">
 	</body>
 </html>
