--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<ul>
-			<li><a href="xenose.github.io">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li>Portfolio</li>
 			<li>About</li>
 		</ul>
