removed the object tag

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 			<li>Portfolio</li>
 			<li>About</li>
 		</ul>
-		<object data="texts/home_en.txt">
+		<h1>Sebastian Johansson</h1>
 	</body>
 </html>
