--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 		<link rel="stylesheet" href="main.css">
 	</head>
 	<body>
+		<h1>Sebastian Johansson</h1>
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li>Portfolio</li>
 			<li>About</li>
 		</ul>
-		<h1>Sebastian Johansson</h1>
+
+		<hr>
+
+		<article>
+			<h2>Mappy</h2>
+			<p>2020<p>
+			<img src="images/mappy_01.png" alt="---> image 01 of the game mappy <---">
+			<p>
+				A classic japanese game called Mappy, Created by me and my classmates for "We are TCA" event.<br><br>
+				I work on the entity controlling scripts and door mechanics.
+			</p>
+			<a href="https://github.com/Xenose/Maki2020_we_are">[ Source Code ]</a>
+	  	</article>
+
+		<hr>
 	</body>
 </html>
