--- a/micro.html
+++ b/micro.html
@@ -10,7 +10,7 @@
 			<li><a href="index.html">[ Index ]</a></li>
 			<li><a href="current.html">[ Current ]</a></li>
 			<li><a href="index.html">[ Micro Projects ]</a></li>
-			<li><a href="index.html">[ Home Network ]</a></li>
+			<li><a href="network.html">[ Home Network ]</a></li>
 			<li><a href="about.html">[ About ]</a></li>
 		</ul>
 
@@ -42,6 +42,13 @@
 			<article class="article_port">
 				<h2>socket</h2>
 				<p>2021<p>
+				<p>
+				</p>
+	  		</article>
+			
+			<article class="article_port">
+				<h2>Terminal raw mode</h2>
+				<p>2019~2020<p>
 				<p>
 				</p>
 	  		</article>
