--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<li><a href="index.html">[ Index ]</a></li>
 			<li><a href="current.html">[ Current ]</a></li>
 			<li><a href="micro.html">[ Micro Projects ]</a></li>
-			<li><a href="index.html">[ Home Network ]</a></li>
+			<li><a href="network.html">[ Home Network ]</a></li>
 			<li><a href="about.html">[ About ]</a></li>
 		</ul>
 
