--- a/network.html
+++ b/network.html
@@ -5,24 +5,24 @@
 	</head>
 	<body>
 		<h1>Sebastian Johansson</h1>
+
 		<ul class="menu">
 			<li><a href="index.html">[ Index ]</a></li>
 			<li><a href="current.html">[ Current ]</a></li>
 			<li><a href="micro.html">[ Micro Projects ]</a></li>
 			<li><a href="network.html">[ Home Network ]</a></li>
 			<li><a href="about.html">[ About ]</a></li>
-		</ul>		
-		
-		<hr>
-
-		<article class="article_other">
-			<h2>About me</h2>
-			<p>
-			</p>
-		</article>
+		</ul>
 
 		<hr>
+
+		<main>
+		</main>
+
+		<hr>
+
+		<footer>
+		</footer>
 	</body>
 </html>
-
 
