--- a/index.html
+++ b/index.html
@@ -1,10 +1,30 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
+
 	<head>
 		<link rel="stylesheet" href="main.css">
+      <script src="posts.js"></script>
 	</head>
-	<body>
-		<h1>Sebastian Johansson</h1>
+	
+   <body onload="InsertPosts()">
+      <header>
+		   <h1>Sebastian Johansson [ Software Engineer ]</h1>
+
+         <ul>
+            <li><a href="index.html">Home</a></li>
+            
+            <ul>
+               <li>Test</li>
+            </ul>
+
+            <li><a href="https://github.com/Xenose">Github</a></li>
+         </ul>
+      </header>
+
+      <div id="posts"></div>
+
 		<footer>
 		</footer>
 	</body>
