--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 	<head>
-		<link rel="stylesheet" href="main.css">
+      <!--<link rel="stylesheet" href="main.css">-->
       <script src="posts.js"></script>
 	</head>
 	
